adding checked exception examples