@@ -9,11 +9,10 @@ public class IllegalAccessExceptionExample {
     public static void main(String[] args) {
 
         try{
-            Access ace=Access.class.newInstance();
+            Access ace= Access.class.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             e.printStackTrace();
             System.out.println(e.getMessage());
         }
-
     }
 }
